--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1438,7 +1438,7 @@
         #profileProcedureContainer .inner {margin: 1em 0.5em 1em 0.5em}
         #procedureForm { margin-left: 0.5em;}
         #profileProcedureContainer .procedureDateLabel { margin-bottom: 0;}
-        #profileProcedureContainer button.btn {color:#777}
+        #profileProcedureContainer button.btn {color:#777; font-size: 0.95em; height: 2.7em;}
     </style>
     <div class="row">
             <div class="col-md-12 col-xs-12">
