--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -64,6 +64,7 @@ body {
 }
 a {
   color: #57675B;
+  cursor: pointer;
 }
 a:hover,
 a:active {
@@ -76,6 +77,7 @@ a.btn {
 .btn-tnth-back {
   color: #777;
   padding: 0 5px 0 0;
+  margin: 1em 0;
 }
 .form-control {
   font-size: 16px;
@@ -167,14 +169,14 @@ select:not([multiple]) {
 }
 #stickyMenu {
   position: fixed;
-  top: 16em;
+  top: 14.5em;
   left: 0;
   -webkit-transform: translate(-500px, 0);
   transform: translate(-500px, 0);
   transition: transform 0.5s ease;
   right: 0;
   padding: 1.5em 0.8em;
-  font-size: 0.75em;
+  font-size: 0.8em;
   min-height: 370px;
   height: 30%;
   color: #494e37;
@@ -210,7 +212,7 @@ select:not([multiple]) {
   list-style-type: none;
 }
 #stickyMenu li {
-  margin-bottom: 7px;
+  line-height: 2.2em;
   cursor: pointer;
 }
 #stickyMenu li:hover {
@@ -226,13 +228,16 @@ a.back {
   display: none;
 }
 a.open {
-  top: 14em;
+  top: 14.1em;
 }
 a.open:hover {
   color: #2a4531;
 }
 a.back:hover {
   color: #2a4531;
+}
+a.open .glyphicon, a.back .glyphicon {
+  font-size: 1.2em;
 }
 div.left-panel {
   position: fixed;
@@ -253,6 +258,7 @@ div.right-panel {
   position: relative;
   margin-left: 1em;
   transition: margin-left ease 0.5s;
+  max-width: 991px;
 }
 #adminTable {
   min-height: 280px;
@@ -395,7 +401,7 @@ div.right-panel {
   color: #575F5C;
   border-top: 1px solid  #E0E6E3;
   border-bottom: 1px solid  #E0E6E3;
-  padding: 0.5em 0.2em 0.7em 0.2em;
+  padding: 0.6em 0.2em 0.63em 0.2em;
   background-image: linear-gradient(to right, #ffffff, rgba(159, 165, 167, 0.16), rgba(173, 193, 197, 0.18));
   vertical-align: center;
 }
@@ -417,7 +423,6 @@ div.right-panel {
   box-shadow: 1px 1px 1px 0px #777;
   border-left: 1px solid #ddd;
   border-top: 1px solid #ddd;
-  border-radius: 4px;
   margin-left: -4px;
   display: inline-block;
 }
@@ -441,6 +446,7 @@ div.right-panel {
   padding: 0.5em 1em;
   border: solid #ccc 1px;
   text-decoration: none;
+  letter-spacing: 1px;
 }
 #indexNavBar span:hover {
   color: #2a4531;
@@ -652,7 +658,7 @@ div.right-panel {
   width: 100%;
 }
 .profile-img {
-  display: inline:block;
+  display: inline-block;
   margin-top: 10px;
   margin-left: 6px;
 }
@@ -776,7 +782,7 @@ div.right-panel {
   /*background-color: rgba(173, 193, 197, 0.16);*/
   /*background-color: rgba(204, 206, 204, 0.25);*/
   background-image: linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%);
-  padding: 2em 2.5em 3em 2.5em;
+  padding: 2em 2.5em 2.5em 2.5em;
   border-radius: 8px;
   margin: 0.5em auto;
   border: 1px solid #E0E6E3;
@@ -1256,12 +1262,12 @@ table.profile-audit-log TH,
 .checkbox-inline input[type=checkbox],
 .radio input[type=radio],
 .radio-inline input[type=radio] {
-  margin-top: 4px;
+  margin-top: 5px;
 }
 .radio input[type=radio] {
   position: relative;
   left: 3px;
-  margin-right: 6px;
+  margin-right: 7px;
 }
 .radio-inline input[type=radio] {
   margin-left: -18px;
@@ -1516,6 +1522,7 @@ div.org-container input[type="checkbox"] {
   }
   #indexNavBar {
     display: block;
+    padding-top: 0.1em;
     max-width: 100%;
   }
   #indexNavBar span.glyphicon {
@@ -1526,12 +1533,17 @@ div.org-container input[type="checkbox"] {
   }
   #indexNavBar span.index-list {
     display: inline-block;
+    position: relative;
+    top: 3px;
   }
   #wellContainer .tnth-well {
     height: 60%;
   }
+  .profile-section {
+    padding: 0;
+  }
   .profile-item-container {
-    padding: 1em;
+    padding: 2em;
     max-width: 100%;
   }
   .fixed-table-pagination {
@@ -1566,11 +1578,11 @@ div.org-container input[type="checkbox"] {
     height: 34px;
     margin: 4px auto;
   }
-  .checkbox input[type=checkbox],
-  .checkbox-inline input[type=checkbox],
-  .radio input[type=radio],
-  .radio-inline input[type=radio] {
-    margin-top: 4px;
+  .checkbox input[type=checkbox] {
+    top: -1px;
+  }
+  #profile-gender-list input[type=radio] {
+    top: -2px;
   }
   table.profile-audit-log {
     font-size: 0.7em;
@@ -1821,11 +1833,6 @@ div.org-container input[type="checkbox"] {
     margin-top: 4px;
   }
 }
-@media (min-width: 1070px) {
-  #profileSendEmailContainer {
-    margin-top: 1em;
-  }
-}
 @media (max-width: 1199px) {
   .profile-img {
     display: none;
@@ -1846,6 +1853,9 @@ div.org-container input[type="checkbox"] {
   }
   .patient-detail-container .flex {
     flex-direction: column;
+  }
+  #profileForm .communications-container .flex-item {
+    flex: 0.3 350px;
   }
   .side-md {
     height: 26em;
@@ -1886,12 +1896,11 @@ div.org-container input[type="checkbox"] {
     margin-bottom: 0.5em;
   }
   #profileForm .patient-detail-container .flex-item {
-    margin-right: 4em;
+    flex: 1;
   }
   #profileForm .communications-container .flex-item {
-    margin-right: 5em;
+    flex: 1 30%;
   }
-
 }
 @media (max-width: 1300px) {
   #fullSizeBox {
@@ -1938,11 +1947,6 @@ div.org-container input[type="checkbox"] {
     margin-bottom: 0.5em;
   }
 }
-@media (min-width: 1746px) {
-  #profileForm .last-name-container {
-    margin-left: -1em;
-  }
-}
 @media (max-width: 1745px) {
   body.open-nav .right-panel {
     margin-left: 60px;
@@ -1970,7 +1974,7 @@ div.org-container input[type="checkbox"] {
 }
 @media (max-width: 1341px) {
   body.open-nav .right-panel {
-    margin-left: 197px;
+    margin-left: 190px;
   }
 }
 @media (max-width: 1243px) {
@@ -1998,7 +2002,7 @@ div.org-container input[type="checkbox"] {
     margin-left: 160px;
   }
 }
-@media (max-width: 1070px) {
+@media (max-width: 1077px) {
   body.open-nav .right-panel {
     margin-left: 210px;
   }
