--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -73,6 +73,7 @@ body {
 
 a {
   color: @linkColor;
+  cursor: pointer;
 }
 a:hover, a:active {
   color: @linkHover;
@@ -126,6 +127,7 @@ a.btn {
 .btn-tnth-back {
   color: #777;
   padding: 0 5px 0 0;
+  margin: 1em 0;
 }
 .form-control {
   font-size: @baseFontSize;
@@ -187,7 +189,7 @@ select:not([multiple]) {
   transition: transform 0.5s ease;
   right: 0;
   padding: 1.5em 0.8em;
-  font-size: @xsmallText;
+  font-size: 0.8em;
   min-height: 370px;
   height: 60%;
   color: @menuTextColor;
@@ -218,7 +220,7 @@ select:not([multiple]) {
     list-style-type:none;
   }
   li {
-    margin-bottom:7px;
+    line-height: 2.2em;
     cursor:pointer;
   }
   li:hover {
@@ -234,10 +236,14 @@ a.open, a.back {
   display: none;
 }
 a.open {
-  top: 14em;
+  top: 14.1em;
   &:hover {
     color:@linkHover;
   }
+}
+a.open .glyphicon,
+a.back .glyphicon {
+  font-size: 1.2em;
 }
 div.left-panel {
   position:fixed;
@@ -259,6 +265,7 @@ div.right-panel {
   position:relative;
   margin-left: 1em;
   transition:margin-left ease .5s;
+  max-width: 991px;
 }
 
 h4.detail-title {
@@ -438,7 +445,7 @@ h4.detail-title {
   color: #575F5C;
   border-top: 1px solid  #E0E6E3;
   border-bottom: 1px solid  #E0E6E3;
-  padding: 0.5em 0.2em 0.7em 0.2em;
+  padding: 0.6em 0.2em 0.63em 0.2em;
   background-image: linear-gradient( to right, #ffffff, rgba(159, 165, 167, 0.16), rgba(173, 193, 197, 0.18) );
   vertical-align: center;
 
@@ -461,7 +468,6 @@ h4.detail-title {
     box-shadow: 1px 1px 1px 0px #777;
     border-left: 1px solid #ddd;
     border-top: 1px solid #ddd;
-    border-radius: 4px;
     margin-left: -4px;
     display: inline-block;
   }
@@ -483,6 +489,7 @@ h4.detail-title {
     padding: 0.5em 1em;
     border: solid #ccc 1px;
     text-decoration: none;
+    letter-spacing: 1px;
   }
 
   #indexNavBar span:hover{
@@ -849,7 +856,7 @@ h4.detail-title {
   /*background-color: rgba(173, 193, 197, 0.16);*/
   /*background-color: rgba(204, 206, 204, 0.25);*/
   background-image: linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%) ;
-  padding: 1.5em 2.5em 2em 2.5em;
+  padding: 2em 2.5em 2.5em 2.5em;
   border-radius: 8px;
   margin: 0.5em auto;
   border: 1px solid #E0E6E3;
@@ -1622,7 +1629,7 @@ div.org-container {
   }
 
   #indexNavBar {
-    padding-top: 0.4em;
+    padding-top: 0.1em;
     max-width: 100%;
     span.glyphicon {
       margin-left: -2px;
@@ -1632,6 +1639,8 @@ div.org-container {
     }
     span.index-list {
       display: inline-block;
+      position: relative;
+      top: 3px;
     }
   }
 
@@ -1643,7 +1652,7 @@ div.org-container {
   font-size: 0.9em;
   }
   .profile-item-container {
-     padding: 1em;
+     padding: 2em;
      max-width: 100%;
   }
 
@@ -1673,19 +1682,21 @@ div.org-container {
       max-width: 100%;
     }
   }
-
+  .profile-section {
+    padding: 0;
+  }
   .form-control {
     height: 34px;
     margin: 4px auto;
   }
 
-  table.profile-audit-log TH,
-  .checkbox input[type=checkbox],
-  .checkbox-inline input[type=checkbox],
-  .radio input[type=radio],
-  .radio-inline input[type=radio] {
-    margin-top: 4px;
+  .checkbox input[type=checkbox] {
+    top: -1px;
   }
+  #profile-gender-list input[type=radio] {
+    top: -2px;
+  }
+
   table.profile-audit-log {
     font-size: @xxsmallText;
   }
@@ -1958,12 +1969,6 @@ div.org-container {
     height: 26em;
   }
 }
-@media (min-width: 1070px) {
-  #profileSendEmailContainer {
-    margin-top: 1em;
-    margin-left: 0.5em;
-  }
-}
 @media (max-width: 1199px) {
   .profile-img {
     display: none;
@@ -1986,6 +1991,9 @@ div.org-container {
   }
   .patient-detail-container .flex {
     flex-direction: column;
+  }
+  #profileForm .communications-container .flex-item {
+    flex: 0.3 350px;
   }
 }
 @media (min-width: 1200px) {
@@ -2023,10 +2031,10 @@ div.org-container {
 
   #profileForm {
     .patient-detail-container .flex-item {
-      margin-right: 2em;
+      flex: 1;
     }
     .communications-container .flex-item {
-      margin-right: 5em;
+      flex: 1 30%;
     }
   }
 }
@@ -2134,7 +2142,7 @@ div.org-container {
     margin-left:160px;
   }
 }
-@media (max-width: 1070px) {
+@media (max-width: 1077px) {
   body.open-nav .right-panel {
     margin-left:210px;
   }
