--- a/portal/templates/portal_wrapper.html
+++ b/portal/templates/portal_wrapper.html
@@ -120,11 +120,8 @@
                             {% if user and user.has_roles('application_developer') %}
                             <li><a href="{{PORTAL}}/clients">{{ _("Client Applications") }}</a></li>
                             {% endif %}
-                            {% if user and user.has_roles(ROLE.STAFF) %}
+                            {% if user and (user.has_role(ROLE.STAFF) or user.has_role(ROLE.INTERVENTION_STAFF)) %}
                             <li><a href="{{PORTAL}}/patients/">{{ _("Patients") }}</a></li>
-                            {% endif %}
-                             {% if user and user.has_roles(ROLE.INTERVENTION_STAFF) %}
-                            <li><a href="{{PORTAL}}/admin/intervention">{{ _("Intervention Patients") }}</a></li>
                             {% endif %}
                             {% if user and user.has_roles('admin') %}
                             <li><a href="{{PORTAL}}/admin">{{ _("User Administration") }}</a></li>
