--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1134,9 +1134,7 @@ div.noOrg-container {
   padding-top: 0.5em;
   padding-bottom: 0.5em;
 }
-.patient-detail-container .flex-item {
-  margin-right: 2em;
-}
+
 .orgLinks {
   margin-top: 4px;
 }
@@ -2077,7 +2075,7 @@ div.org-container {
 
   #profileForm {
      .patient-detail-container .flex-item {
-        flex: 1;
+        flex: 0.3 300px;
       }
     .communications-container .flex-item {
         flex: 1 30%;
