--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -856,7 +856,7 @@ h4.detail-title {
   /*background-color: rgba(173, 193, 197, 0.16);*/
   /*background-color: rgba(204, 206, 204, 0.25);*/
   background-image: linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%) ;
-  padding: 2em 2.5em 2.5em 2.5em;
+  padding: 2em 2.5em 3.5em 2.5em;
   border-radius: 8px;
   margin: 0.5em auto;
   border: 1px solid #E0E6E3;
@@ -915,12 +915,40 @@ h4.detail-title {
 }
 
 #userOrgs {
- font-size:@orgSize;
+  font-size:@orgSize;
+  .prompt {
+    line-height: 2em;
+  }
+  #stateSelector {
+    width: 20%;
+    max-width: 200px;
+    line-height: 1.1em;
+    padding: 0.5em;
+    border-radius: 0
+  }
+  &.customized input.clinic {
+    position: relative;
+    left: 2px;
+    top: -1px;
+  }
+}
+#userOrgsInfo {
+  display: none;
+}
+div.main-state-container .noOrg-container {
+  margin-top: -0.5em;
+  margin-left: 1.03em;
+}
+.state-container, .state-selector-container {
+  padding: 0 1em;
 }
 
 #fillOrgs {
   font-size: @orgSize;
   margin-top: 0.2em;
+  &.orgs-by-state {
+    margin-top: 2em;
+  }
   input.clinic {
     margin-top: 6px;
   }
@@ -954,9 +982,10 @@ div.noOrg-container {
   top: 2px;
   }
   span {
-  margin-left:5px;
+  margin-left:3px;
   position: relative;
   top: 1px;
+  font-weight: normal;
   }
 }
 #createProfileForm  {
