more clinic selector fixes, and some css fixes

--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -828,9 +828,9 @@ h4.detail-title {
 #userOrgs #stateSelector {
   width: 20%;
   max-width: 200px;
-  line-height: 1.1em;
-  padding: 0.5em;
-  border-radius: 0
+  line-height: 1.2em;
+  padding: 0.5em 1em;
+  border-radius: 0;
 }
 #userOrgs.customized input.clinic {
   position: relative;
@@ -1857,6 +1857,9 @@ div.org-container input[type="checkbox"] {
 
 }
 @media (min-width: 1200px) {
+   body.open-nav .footer-wrapper {
+    margin-left: 270px !important;
+   }
   #fullSizeContainer {
     padding: 60px 0 60px;
   }
@@ -1904,6 +1907,9 @@ div.org-container input[type="checkbox"] {
   }
   body.open-nav .left-panel {
     width: 215px;
+  }
+  body.open-nav .footer-wrapper {
+    margin-left: 215px !important;
   }
 }
 @media (min-width: 1400px) {
