--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -922,9 +922,9 @@ h4.detail-title {
   #stateSelector {
     width: 20%;
     max-width: 200px;
-    line-height: 1.1em;
-    padding: 0.5em;
-    border-radius: 0
+    line-height: 1.2em;
+    padding: 0.5em 1em;
+    border-radius: 0;
   }
   &.customized input.clinic {
     position: relative;
@@ -2026,7 +2026,9 @@ div.org-container {
   }
 }
 @media (min-width: 1200px) {
-
+  body.open-nav .footer-wrapper {
+    margin-left: 270px !important;
+   }
   #fullSizeContainer {
     padding: 60px 0 60px;
   }
@@ -2078,6 +2080,9 @@ div.org-container {
   }
   body.open-nav .left-panel {
     width: 215px;
+  }
+  body.open-nav .footer-wrapper {
+    margin-left: 215px !important;
   }
 }
 
