--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -205,7 +205,7 @@ select:not([multiple]) {
   z-index: 11;
   background-color: @bodyBgColor;
   overflow: auto;
-  transition: all 500ms ease-in;
+  transition: all 500ms ease-out;
   display: block;
   &.sticky-show {
     -webkit-transform: translate(0, 0);
@@ -225,11 +225,13 @@ select:not([multiple]) {
     list-style-type:none;
   }
   li {
-    line-height: 2.2em;
+    margin-bottom: 1em;
+    transform-origin: 0 100%;
     cursor:pointer;
   }
   li:hover {
     color: @menuTextHoverColor;
+    transform: scale(1.1);
   }
 }
 a.open, a.back {
@@ -867,6 +869,7 @@ h4.detail-title {
   border: 1px solid #E0E6E3;
   overflow-y: hidden;
   overflow-x: hidden;
+  max-width: 100%;
 }
 
 .profile-item-title {
@@ -1033,6 +1036,7 @@ div.noOrg-container {
   border: 1px solid #cec4c4;
   padding-left: 2em;
   padding-right: 2em;
+  max-width: 100%;
   label{
     font-size:@mediumText;
   }
@@ -1344,6 +1348,7 @@ div.noOrg-container {
   justify-content: flex-start;
   div.flex-item {
     padding: 8px 12px 8px 0;
+    max-width: 100%;
   }
 }
 
@@ -1650,8 +1655,8 @@ div.timezone-warning.text-warning {
   .tnth-form .form-group > label {
     font-size: 13px;
   }
-  .flex div {
-    margin-left: 0.1em;
+  div.right-panel {
+    margin-left: 0 !important;
   }
   .create-user-link {
     font-size: @mediumText;
@@ -1719,23 +1724,17 @@ div.timezone-warning.text-warning {
   .profile-section {
     padding: 0;
   }
-  .form-control {
-    height: 34px;
-    margin: 4px auto;
-  }
-
   .checkbox input[type=checkbox] {
     top: -1px;
   }
   #profile-gender-list input[type=radio] {
     top: -2px;
   }
-
-  table.profile-audit-log {
-    font-size: @xxsmallText;
+  #profile-gender-list input[type=radio] {
+    top: -2px;
   }
-  #profileConsentList {
-    font-size: 0.5em;
+  #profileAuditLogTable, #profileConsentList {
+    font-size: 0.6em;
   }
   .create-account-container {
     padding: 3.5em 3em;
