--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -204,9 +204,11 @@ select:not([multiple]) {
   border-radius: 8px;
   z-index: 11;
   background-color: @bodyBgColor;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   transition: all 500ms ease-out;
   display: block;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
   &.sticky-show {
     -webkit-transform: translate(0, 0);
     transform: translate(0, 0);
@@ -231,7 +233,7 @@ select:not([multiple]) {
   }
   li:hover {
     color: @menuTextHoverColor;
-    transform: scale(1.1);
+    transform: scale(1.05);
   }
 }
 a.open, a.back {
