--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -242,9 +242,11 @@ select:not([multiple]) {
   border-radius: 8px;
   z-index: 11;
   background-color: @bodyBgColor;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
   transition: transform 500ms ease-out;
   display: block;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
   &.sticky-show {
     -webkit-transform: translate(0, 0);
     transform: translate(0, 0);
@@ -269,7 +271,7 @@ select:not([multiple]) {
   }
   li:hover {
     color: @menuTextHoverColor;
-    transform: scale(1.1);
+    transform: scale(1.05);
   }
 }
 
