minor responsive styling fixes to patients list

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -327,7 +327,10 @@ div.right-panel {
   tr[data-uniqueid]:hover {
    background-color: #ececea;
   }
-
+  TH {
+    background-image: linear-gradient(to bottom, #FFF, #efefef);
+    letter-spacing: 0.1px;
+  }
 }
 #adminTableToolbar {
   div.orglist-selector {
