fix href of create patient record button in patients list

--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -300,7 +300,7 @@ h4.detail-title {
     background-color: #ececea;
   }
   TH {
-    background-image: linear-gradient(to bottom, #FFF, #dcddde);
+    background-image: linear-gradient(to bottom, #FFF, #efefef);
     letter-spacing: 0.1px;
   }
 }
